# includeos-energy-benchmark

./: benchmarks.nix  create-iso.sh  default.nix  shell.nix
src/benchmarks/: .gitignore  CMakeLists.txt
src/benchmarks/crc32/: Makefile  crc32.h  crc_32.c
src/benchmarks/cubic/: Makefile  basicmath_small.c  cubic.h  libcubic.c
src/benchmarks/dijkstra/: Makefile  dijkstra.h  dijkstra_small.c
src/benchmarks/fdct/: Makefile  fdct.h  libfdct.c
src/benchmarks/fir/: Makefile  fir.h  libfir.c
src/benchmarks/matmult/: Makefile  matmult.c  matmult.h
src/benchmarks/matmult-float/: Makefile  matmult.c  matmult_float.h
src/benchmarks/matmult-int/: matmult.c  matmult_int.h
src/benchmarks/nettle-sha256/: Makefile  nettle-sha256.c  nettle_sha256.h
src/benchmarks/rijndael/: Makefile  aesxam.c  rijndael.h
src/unikernel/: CMakeLists.txt  main.cpp
